# RayTracer

./: CMakeLists.txt  README.md
src/: BaseCamera.cpp  BaseCamera.h  Image.cpp  Image.h  Light.cpp  Light.h  Material.cpp  Material.h  OFFLoader.cpp  OFFLoader.h  OrthographicCamera.cpp  OrthographicCamera.h  OrtographicCamera.cpp  OrtographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Surface.cpp  Surface.h  Triangle.cpp  Triangle.h  main.cpp
